# auto-bat-detector

./: FTP_upload.py  GUI.py  README.md  Train_bats.R  batteryAndTempMonitoring.py  create_barchart.py  create_spectogram.py  create_spectogram_batch_process.py  deploy_classifier_async_01.R  deploy_classifier_async_02.R  deploy_classifier_async_03.R  lora_sender.py  modem.sh  process_audio_files.py  pyproject.toml  record_and_filter.sh  restart_the_app.sh  run.desktop  run.sh  script_1.sh  script_2.sh  script_3.sh  ultrasonic_classifier_dependancies_install.sh
IOT_stuff/html/: list_to_html.sh
development_stuff/: dependancy_install_tensorflow_training.txt  jn_sd_resize.sh  lora_test_01.py  test.py  test.sh  test_FTP_01.py  test_ftp.py  uPilot.txt
development_stuff/deep_learning/: Process images and train.sh  determine_number_of_calls_in_specto.py  determine_number_of_calls_in_specto_1.py  determine_number_of_calls_in_specto_2.py  determine_number_of_calls_in_specto_3.py  retrain.py  run.txt  splitup_and_rename_spectos.sh
